<resources>
    <string name="app_name">Calculator</string>

    <string name="equal">=</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">x</string>
    <string name="divide">/</string>
    <string name="cleaner">AC</string>
    <string name="negative">+/-</string>
    <string name="percent">%</string>
    <string name="dot">.</string>

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="moveButton">Submit</string>

    <!--    Text for second activity-->
    <string name="main_text">Policies</string>
    <string name="policy">Policy</string>
    <string name="category">Product Category</string>
    <string name="country">Origin Country</string>
    <string name="brand">Brand</string>
    <string name="destroy_btn">DESTROY</string>

</resources>