<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <FrameLayout
        app:layout_constraintBottom_toTopOf="@id/main_layout"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <TextView
            android:layout_marginHorizontal="36dp"
            android:layout_gravity="end|bottom"
            android:textColor="@color/white"
            android:textSize="80sp"
            android:text="@string/zero"
            android:ellipsize="end"
            android:maxLines="1"
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </FrameLayout>

    <LinearLayout
        android:id="@+id/main_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingHorizontal="16dp"
            android:paddingVertical="6dp">
            
            <com.google.android.material.button.MaterialButton
                style="@style/Gray.Button"
                android:text="@string/cleaner"
                android:id="@+id/btn_clear"
                android:onClick="onNumberClick"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Gray.Button"
                android:text="@string/negative"
                android:id="@+id/btn_negative"
                android:onClick="onOperationClick"
                android:layout_marginHorizontal="16dp"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Gray.Button"
                android:text="@string/percent"
                android:onClick="onOperationClick"
                android:id="@+id/btn_percent"
                android:layout_marginEnd="16dp"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Orange.Button"
                android:id="@+id/btn_divide"
                android:onClick="onOperationClick"
                android:text="@string/divide"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingHorizontal="16dp"
            android:paddingVertical="6dp">

            <com.google.android.material.button.MaterialButton
                style="@style/Dark.Gray.Button"
                android:text="@string/seven"
                android:id="@+id/btn_seven"
                android:onClick="onNumberClick"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Dark.Gray.Button"
                android:text="@string/eight"
                android:id="@+id/btn_eight"
                android:onClick="onNumberClick"
                android:layout_marginHorizontal="16dp"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Dark.Gray.Button"
                android:text="@string/nine"
                android:id="@+id/btn_nine"
                android:onClick="onNumberClick"
                android:layout_marginEnd="16dp"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Orange.Button"
                android:id="@+id/btn_multiply"
                android:onClick="onOperationClick"
                android:text="@string/multiply"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingHorizontal="16dp"
            android:paddingVertical="6dp">

            <com.google.android.material.button.MaterialButton
                style="@style/Dark.Gray.Button"
                android:text="@string/four"
                android:id="@+id/btn_four"
                android:onClick="onNumberClick"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Dark.Gray.Button"
                android:text="@string/five"
                android:id="@+id/btn_five"
                android:onClick="onNumberClick"
                android:layout_marginHorizontal="16dp"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Dark.Gray.Button"
                android:text="@string/six"
                android:id="@+id/btn_six"
                android:onClick="onNumberClick"
                android:layout_marginEnd="16dp"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Orange.Button"
                android:id="@+id/btn_minus"
                android:onClick="onOperationClick"
                android:text="@string/minus"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingHorizontal="16dp"
            android:paddingVertical="6dp">

            <com.google.android.material.button.MaterialButton
                style="@style/Dark.Gray.Button"
                android:text="@string/one"
                android:id="@+id/btn_one"
                android:onClick="onNumberClick"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Dark.Gray.Button"
                android:text="@string/two"
                android:id="@+id/btn_two"
                android:onClick="onNumberClick"
                android:layout_marginHorizontal="16dp"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Dark.Gray.Button"
                android:text="@string/three"
                android:id="@+id/btn_three"
                android:onClick="onNumberClick"
                android:layout_marginEnd="16dp"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Orange.Button"
                android:id="@+id/btn_sum"
                android:onClick="onOperationClick"
                android:text="@string/plus"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingHorizontal="16dp"
            android:paddingVertical="6dp">

            <com.google.android.material.button.MaterialButton
                style="@style/Dark.Gray.Button"
                android:layout_width="176dp"
                android:text="@string/zero"
                android:id="@+id/btn_zero"
                android:onClick="onNumberClick"
                android:textAlignment="textStart"
                android:paddingStart="32dp"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Dark.Gray.Button"
                android:text="@string/dot"
                android:id="@+id/btn_dot"
                android:onClick="onOperationClick"
                android:layout_marginHorizontal="16dp"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Orange.Button"
                android:id="@+id/btn_equal"
                android:onClick="onOperationClick"
                android:text="@string/equal"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>