<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/result_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity">

    <include layout="@layout/app_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="130dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="25sp"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:gravity="center"
            android:text="@string/main_text"
            android:textStyle="bold"
            android:layout_marginBottom="15dp"/>

        <com.google.android.material.button.MaterialButton
            style="@style/Another.Button"
            android:text="@string/policy" />

        <com.google.android.material.button.MaterialButton
            style="@style/Another.Button"
            android:text="@string/category" />

        <com.google.android.material.button.MaterialButton
            style="@style/Another.Button"
            android:text="@string/country" />

        <com.google.android.material.button.MaterialButton
            style="@style/Another.Button"
            android:text="@string/brand" />

        <TextView
            android:id="@+id/answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:text="Answer"
            android:textStyle="bold"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"/>

        <Button
            android:id="@+id/destroy_all"
            style="@style/Base.Button"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/destroy_btn"
            android:backgroundTint="@color/red"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

